# qa-aqent-frontend

./: .env.development  .env.production  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  ecosystem.config.cjs  ecosystem.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: DEVELOPMENT.md  INSTALL.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  TAURI_DESIGN.md  chatbox-streaming-rendering.md  distributed-dancing-globe.md  routes.py  screenshot.js  thinking-stream-plan.md
docs/plans/: humming-cuddling-tulip.md
docs/screenshots/: README.md
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/permissions/: app-commands.toml
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: config.rs  file.rs  mod.rs  system.rs
src/components/Chat/: ChatContainer.module.css  ChatContainer.tsx  InputBox.module.css  (+8 more)
src/config/: index.ts
src/hooks/: index.ts  useAutoScroll.ts  useChat.ts  useSession.ts  useThinkingStream.ts
src/services/: apiClient.ts  chatApi.ts  databaseApi.ts  documentApi.ts  index.ts  systemApi.ts
src/stores/: chatStore.ts  sessionStore.ts  themeStore.ts  uiStore.ts
src/theme/: darkTheme.ts  index.ts  lightTheme.ts  tokens.ts
src/types/: api.ts  index.ts  message.ts  session.ts  thinking.ts
src/utils/: formatters.ts  helpers.ts  logger.ts  sseParser.ts  storage.ts  taskStorage.ts  urlHelper.ts  validation.ts
(+41 files in other folders)
